# netto

./: CLAUDE.md  Cargo.toml  DESIGN.md  Info.plist  README.md  dev.yml
scripts/: generate-icons.sh
src/: main.rs  netinfo.rs  ping.rs  preferences.rs  settings.rs  sparkline.rs
