[package]
name = "netto"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surge-ping = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "net"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
rand = "0.8"
libc = "0.2"
ureq = { version = "2", default-features = false, features = ["tls"] }
objc2 = "0.6"
objc2-core-foundation = { version = "0.3", default-features = false }
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSArray",
    "NSAttributedString",
    "NSDate",
    "NSDictionary",
    "NSNotification",
    "NSObject",
    "NSProcessInfo",
    "NSRunLoop",
    "NSString",
    "NSThread",
    "NSTimer",
    "NSURL",
    "NSUserDefaults",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSApplication",
    "NSBezierPath",
    "NSButton",
    "NSButtonCell",
    "NSCell",
    "NSColor",
    "NSControl",
    "NSEvent",
    "NSFont",
    "NSFontDescriptor",
    "NSGraphics",
    "NSImage",
    "NSImageCell",
    "NSLayoutConstraint",
    "NSMenu",
    "NSMenuItem",
    "NSParagraphStyle",
    "NSAttributedString",
    "NSStringDrawing",
    "NSPasteboard",
    "NSResponder",
    "NSRunningApplication",
    "NSSlider",
    "NSStackView",
    "NSUserInterfaceLayout",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSTextField",
    "NSTextFieldCell",
    "NSText",
    "NSView",
    "NSWindow",
    "NSWorkspace",
    "objc2-core-foundation",
] }
objc2-service-management = { version = "0.3.2", default-features = false, features = ["std", "objc2", "objc2-foundation", "SMAppService"] }
